--- a/styles.css
+++ b/styles.css
@@ -1,212 +1,98 @@
 body {
 	background-color: black;
-	
-}
-
-
-
-
-
-
-#navText {
-	font-size: 20px;
-	font-weight: 200;
-}
-
-/*img {
-	width: 100%;
-	height: 500px;
-}
-*/
-.images {
-	height: 400px;
-	width: 100%;
-}
-
-
-#desert {
-	position: fixed;
-	/*z-index: 11000;*/
-}
-
-
-
-#helloWorld {
-	height: 100px;
-	width: 100%;
-	background-color: black;
-	opacity: 0.5;
-	z-index: 100;
-
-	font-size: 30px;
-	font-family: 'Exo', sans-serif;
-	font-weight: 100;
-	color: white;
-	text-align: center;
-
-	position: fixed;
-}
-
-
-
-/*#divOne, #mover {
-	height: 500px;
-	width: 500px;
-	
-	vertical-align: middle;
-	margin: auto;
-	position: fixed;
-}*/
-
-#clouds {
-	/*height: 400px;*/
-	/*z-index: 10;*/
-	position: relative;
-	background-color: transparent;
-}
-
-.cloudText {
-	position: absolute;
-	/*position: fixed;*/
-}
-
-#quoteLeft {
-	/*display: inline-block;*/
-	font-size: 40px;
-	width: 50%;
-	height: 50%;
-	/*float: left;*/
-}
-
-#quoteRight {
-	display: inline-block;
-	font-size: 40px;
-	clear: both;
-	width: 50%;
-	height: 50%;
-	/*float: right;*/
-}
-
-#quoteBottom {
-	/*display: inline-block;*/
-	font-size: 40px;
-	clear: both;
-	width: 100%;
-	margin-top: 300px;
-}
-
-#quoteRunoff {
-	/*display: inline-block;*/
-	font-size: 40px;
-	clear: both;
-	width: 100%;
-	margin-top: 400px;
-}
-
-#divOne {
-	height: 450px;
-	width: 100%;
-	background-color: black;
-	text-align: center;
-	vertical-align: middle;
-	margin: auto;
-/*	position: fixed;
-*/}
-
-#divTwo {
-	height: 400px;
-	width: 100%;
-	background-color: black;
-	text-align: center;
-	vertical-align: middle;
-	margin: auto;
-/*	position: fixed;
-*/}
-
-#divThree {
-	height: 400px;
-	width: 100%;
-	background-color: black;
-	text-align: center;
-	/*vertical-align: middle;*/
-	/*margin: auto;*/
-	/*position: fixed;*/
-	/*display: block;*/
-}
-
-#circleOne {
-	height: 100px;
-	width: 100px;
-	float: left;
-	margin-left: 100px;
-	margin-top: 20px;
-	/*position: fixed;*/
-	/*vertical-align: middle;
-	margin: auto;*/
-}
-#circleTwo {
-	height: 100px;
-	width: 100px;
-	float: left;
-	margin-left: 100px;
-	margin-top: 20px;
-}
-#circleThree {
-	height: 100px;
-	width: 100px;
-	float: left;
-	margin-left: 100px;
-	margin-top: 20px;
-}
-
-
-
-div {
 	font-size: 60px;
 	font-family: 'Exo', sans-serif;
 	font-weight: 100;
 	color: white;
 	text-align: center;
-	}
+}
 
-	p {
-		font-size: 12px;
-	}
+#top {
+	height: 70px;
+	width: 100%;
+}
 
-
-
-
-.footer {
-	
-	/*margin: auto;*/
-	height: 150px; 
-	width: 100%; 
+.container {
+	/*margin-top: 40px;*/
 	background-color: black;
-	display: block;
 }
 
-#contact {
-	float: left;
+
+.carousel-indicators {
+	display:none; 
 }
 
-#listngs {
-	clear: both;
-	float: right;
-}
 
-/*.footerP {
-	text-align: right;
-	vertical-align: middle;
-	margin: auto;
+/*.carousel-fade {
+  .carousel-inner {
+    .item {
+      opacity: 0;
+      transition-property: opacity;
+    }
+
+    .active {
+      opacity: 1;
+    }
+
+    .active.left,
+    .active.right {
+      left: 0;
+      opacity: 0;
+      z-index: 1;
+    }
+
+    .next.left,
+    .prev.right {
+      opacity: 1;
+    }
+  }
+
+  .carousel-control {
+    z-index: 2;
+  }
 }*/
 
 
 
+/*#slideshow {
+    position:relative;
+    height:350px;
+}
 
-@media (max-width: 700px) {
-	
+#slideshow IMG {
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:8;
+}
 
-	.footerP {
-		size: 10px;
-	}
+#slideshow IMG.active {
+    z-index:10;
+}
+
+#slideshow IMG.last-active {
+    z-index:9;
+}*/
+
+#divOne {
+	position: relative;
+}
+
+
+#cloudText {
+	font-size: 40px;
+	font-weight: 100;
+	color: white;
+}
+
+
+#future {
+	font-size: 30px;
+	font-weight: 150;
+}
+
+#contact, #listings, #divOne, #divTwo {
+	font-size: 30px;
+	font-weight: 150;
+	color: #999;
 }
