--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,27 @@ body {
 	text-align: center;
 }
 
-div {
-	float: center;
+.navbar {
+  color: white;
+  background: black;
 }
+
+.nav {
+  color: white;
+}
+.content {
+  margin-top: 700px;
+  position: relative;
+  background: white;
+}
+
+#landing {
+  position: fixed;
+}
+
+/*div {
+	float: center;
+}*/
 
 #top {
 	height: 70px;
@@ -23,6 +41,19 @@ div {
 
 .carousel-indicators {
 	display:none; 
+}
+
+.divLeft, .divRight {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.divCenter {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: 150;
+  color: #999;
 }
 
 
@@ -76,16 +107,37 @@ div {
 #slideshow IMG.last-active {
     z-index:9;
 }*/
+#clouds {
+  background: url("images/sky-home.jpg");
+  height: 500px;
+  width: 100%;
+}
+
+.quote {
+  width: 200px;
+  height: 200px;
+}
 
 #divOne {
 	position: relative;
 }
 
+.textOverlay {
+  background: white;
+
+}
+
+.yellowTop {
+  background: #FFDC00;
+  width: 100%;
+}
+
 
 #cloudText {
-	font-size: 40px;
+	font-size: 35px;
 	font-weight: 100;
-	color: white;
+	background: white;
+  /*position: relative;*/
 }
 
 
@@ -98,4 +150,9 @@ div {
 	font-size: 30px;
 	font-weight: 150;
 	color: #999;
+}
+
+#divThree {
+  height: 500px;
+  background: #6e5e78;
 }
