--- a/styles.css
+++ b/styles.css
@@ -16,37 +16,40 @@ body {
   color: white;
 }
 .content {
-  margin-top: 700px;
+  margin-top: 50%;
   position: relative;
   background: white;
 }
 
+#top {
+  height: 50px;
+  width: 100%;
+}
+
 #landing {
   position: fixed;
+  background-color: transparent;
 }
 
 /*div {
 	float: center;
 }*/
 
-#top {
-	height: 70px;
-	width: 100%;
-}
 
-.container {
+
+/*.container {
 	background-color: black;
 }
 
 
 .carousel-indicators {
 	display:none; 
-}
+}*/
 
-.divLeft, .divRight {
+/*.divLeft, .divRight {
   margin-top: 20px;
   margin-bottom: 20px;
-}
+}*/
 
 .divCenter {
   margin-top: 20px;
@@ -108,9 +111,14 @@ body {
     z-index:9;
 }*/
 #clouds {
-  background: url("images/sky-home.jpg");
-  height: 500px;
+  background: url("images/keyboard.png");
+  /*height: 500px;*/
   width: 100%;
+  height: 100%;
+}
+
+.textBox {
+  padding-top: 150px;
 }
 
 .quote {
@@ -120,6 +128,7 @@ body {
 
 #divOne {
 	position: relative;
+  background: #6e5e78;
 }
 
 .textOverlay {
@@ -155,4 +164,10 @@ body {
 #divThree {
   height: 500px;
   background: #6e5e78;
+}
+
+@media (max-width: 600px) {
+  #cloudText {
+    font-size: 20px;
+  }
 }
