--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ a a:visited {
   color: white;
 }
 .content {
-  margin-top: 50%;
+  /*margin-top: 50%;*/
   position: relative;
   background: white;
 }
@@ -42,20 +42,25 @@ a a:visited {
 }
 
 #landing {
-  background: url("images/mtHoodLg.png");
+  /*background: url("images/mtHoodLg.png");*/
+  background: transparent;
   position: fixed;
   height: 100%;
   width: 100%;
 }
 
 #slogan {
-  /*height: 700px;*/
-  background: transparent;
+  height: 100%;
+  /*background: transparent;
   font-size: 50px;
   color: white;
   font-family: 'Exo', sans-serif;
-  text-align: center;
-  padding-top: 300px;
+  
+  */
+  /*text-align: center;*/
+  /*vertical-align: middle;*/
+  margin-top: 3%;
+  margin-left: 30%;
   position: relative;
   display: block;
 }
@@ -81,15 +86,20 @@ a a:visited {
   font-size: 15px;
 }
 
+.aboutTitle {
+  font-size: 30px;
+  text: right;
+}
+
 .title {
-  font-size: 25px;
+  font-size: 30px;
 }
 
 #coreValues {
   font-size: 19px;
   /*background: black;  */
   font-weight: 400;
-  height: 500px;
+  /*height: 500px;*/
   background: rgb(242, 242, 242);
   font-size: 19px;
   font-weight: 400;
@@ -100,13 +110,14 @@ a a:visited {
 }
 #coreValues div {
   padding-bottom: 10px;
+  padding-top: 10px;
 
 
 }
 
 #divTwo {
   /*background: url("images/comp.jpg");*/
-  /*height: 100%;*/
+  height: 100%;
   width: 100%;
   font-size: 19px;
   font-weight: 400;
@@ -122,12 +133,18 @@ a a:visited {
 }
 
 
+
 #itRecuiting {
   /*height: 100%;*/
   position: absolute;
   top: 10%;
-  text-align: right;
-  font-weight: 500;
+  text-align: center;
+  font-weight: 800;
+}
+
+.directIt {
+  /*background: black;*/
+  /*box-shadow: 10px 10px 5px #888888;*/
 }
 
 .modal-content {
@@ -139,13 +156,9 @@ a a:visited {
   margin-bottom: 10px;
 }
 
-/*.dannImg {
-  padding-top: 80px;
+.modalImg {
+  padding-top: 50px;
 }
-
-.harrisonImg {
-  padding-top: 15px;
-}*/
 
 #divThree {
   height: 500px;
@@ -271,27 +284,34 @@ a a:visited {
 }
 
 
+.btn-default {
+  background-image: none;
+  width: 20%;
+}
 
 
 
 
-
-@media (max-width: 600px) {
+@media (max-width: 690px) {
   #cloudText {
     font-size: 20px;
   }
 
-  #landing {
-    height: 300px;
-  }
+  /*#landing {
+    height: 400px;
+  }*/
 
   #slogan {
-    height: 300px;
+    /*height: 300px;*/
     padding-top: 100px;
 
   }
 
   .content {
-    margin-top: 0px;
+    margin-top: 0%;
+  }
+
+  #aboutUs {
+    /*padding-left: 10px;*/
   }
 }
