--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,29 @@
+/*@media only screen and (min-width: 0) and (max-width: 2040px){
+  body {background:#352c35 url(images/mtHoodLg.png) 
+    center 20px no-repeat;background-size:100% auto;
+  }*/
+
+
+
 body {
-	background-color: black;
+	background: transparent;
 	/*font-size: 60px;*/
 	/*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
   font-family: helvetica, Arial, sans-serif;
   font-weight: 100;
-  color: white;
-	/*text-align: center;*/
+  color: #EEE8DA;
+  max-width: 1000px !important;
+  /*padding-left: 20px;
+  padding-right: 20px;*/
+  /*width: 1000px;*/
+	text-align: center;
+  /*margin-bottom: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-top: 8px;*/
+  overflow: auto;
+  margin: auto;
+  /*width: 1000px;*/
 }
 
 a a:visited {
@@ -42,10 +60,13 @@ a a:visited {
 }
 
 #landing {
-  /*background: url("images/mtHoodLg.png");*/
-  background: transparent;
+  background:#352c35 url('images/mtHoodLg.png') 
+    center 20px no-repeat;background-size:100% auto;
+  /*background: transparent;*/
+  max-width: 1000px;
   position: fixed;
   height: 100%;
+
   width: 100%;
 }
 
@@ -67,7 +88,7 @@ a a:visited {
 
 
 #divOne {
-  position: relative;
+  /*position: relative;*/
   background: black;
   
   /*font-weight: 100;*/
@@ -78,7 +99,7 @@ a a:visited {
   /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
   font-family: helvetica, Arial, sans-serif;
 
-  color: white;
+  /*color: white;*/
   font-size: 19px;
 }
 
@@ -88,63 +109,7 @@ a a:visited {
 
 .aboutTitle {
   font-size: 30px;
-  text: right;
-}
-
-.title {
-  font-size: 30px;
-}
-
-#coreValues {
-  font-size: 19px;
-  /*background: black;  */
-  font-weight: 400;
-  /*height: 500px;*/
-  background: rgb(242, 242, 242);
-  font-size: 19px;
-  font-weight: 400;
-  color: black;
-  position: relative;
-
-
-}
-#coreValues div {
-  padding-bottom: 10px;
-  padding-top: 10px;
-
-
-}
-
-#divTwo {
-  /*background: url("images/comp.jpg");*/
-  height: 100%;
-  width: 100%;
-  font-size: 19px;
-  font-weight: 400;
-  color: black;
-  /*text-align: right;*/
-  position: relative;
-}
-
-#divTwo h2 {
-  position: absolute;
-  top: 10%;
-  left: 10%;
-}
-
-
-
-#itRecuiting {
-  /*height: 100%;*/
-  position: absolute;
-  top: 10%;
-  text-align: center;
-  font-weight: 800;
-}
-
-.directIt {
-  /*background: black;*/
-  /*box-shadow: 10px 10px 5px #888888;*/
+  text-align: right;
 }
 
 .modal-content {
@@ -160,12 +125,91 @@ a a:visited {
   padding-top: 50px;
 }
 
-#divThree {
-  height: 500px;
+.title {
+  font-size: 30px;
+}
+
+button {
+  background: black;
+  color: #EEE8DA;
+  border: solid 1px #767676;
+  border-radius: 5px;
+  font-weight: normal;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+#coreValues {
+  font-size: 19px;
+  /*background: black;  */
+  font-weight: 400;
+  /*height: 500px;*/
   background: rgb(242, 242, 242);
+  font-weight: 400;
+  color: black;
+  position: relative;
+}
+
+#coreValues div {
+  padding: 10px;
+  padding-top: 10px;
+
+}
+
+#divTwo {
+  background: none;
+  /*width: 100%;*/
+  width: 100%;
   font-size: 19px;
   font-weight: 400;
   color: black;
+  /*text-align: right;*/
+  position: relative;
+}
+
+#divTwo h2 {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+}
+
+#divTwo img {
+  width: 100%;
+}
+
+
+#itRecruiting {
+  width: 100%;
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  font-weight: 800;
+}
+
+/*#rapidlyFill {
+  color: #EEE8DA;
+  background: #ea5b50;
+  border-radius: 5px;
+}*/
+
+.directIt {
+  /*background: black;*/
+  /*box-shadow: 10px 10px 5px #888888;*/
+}
+
+#pdx {
+  position: relative;
+}
+
+
+#divThree {
+  height: 500px;
+  background: rgb(242, 242, 242);
+  /*font-size: 19px;*/
+  /*font-weight: 400;*/
+  color: black;
+  width: 100%;
   position: relative;
 }
 
@@ -228,16 +272,7 @@ a a:visited {
 #slideshow IMG.last-active {
     z-index:9;
 }*/
-#clouds {
-  background: url("images/keyboard.png");
-  /*height: 500px;*/
-  width: 100%;
-  height: 100%;
-}
 
-.textBox {
-  padding-top: 150px;
-}
 
 .quote {
   width: 200px;
@@ -278,8 +313,8 @@ a a:visited {
 
 #contact {
   text-align: right;
-  font-size: 30px;
-  font-weight: 150;
+  /*font-size: 30px;*/
+  /*font-weight: 150;*/
   color: black;
 }
 
@@ -292,7 +327,7 @@ a a:visited {
 
 
 
-@media (max-width: 690px) {
+@media (max-width: 790px) {
   #cloudText {
     font-size: 20px;
   }
@@ -300,6 +335,12 @@ a a:visited {
   /*#landing {
     height: 400px;
   }*/
+
+  #itRecuiting {
+   position: relative;
+   background: white;
+   font-size: 10px;
+}
 
   #slogan {
     /*height: 300px;*/
