--- a/styles.css
+++ b/styles.css
@@ -4,40 +4,33 @@
   }*/
 
 
+body, html {
+  height: 100%;
+}
 
 body {
 	background: transparent;
-	/*font-size: 60px;*/
 	/*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
   font-family: helvetica, Arial, sans-serif;
   font-weight: 100;
   color: #EEE8DA;
-  max-width: 1000px !important;
-  /*padding-left: 20px;
-  padding-right: 20px;*/
-  /*width: 1000px;*/
-	text-align: center;
-  /*margin-bottom: 8px;
-  margin-left: 8px;
-  margin-right: 8px;
-  margin-top: 8px;*/
+  max-width: 1500px !important;
   overflow: auto;
   margin: auto;
-  /*width: 1000px;*/
 }
 
 a a:visited {
   text-decoration: none;
   color: white;
 }
-
+/*
 .alignRight {
   text-align: right;
 }
 
 .alignLeft {
   text-align: left;
-}
+}*/
 
 
 .navbar {
@@ -49,21 +42,22 @@ a a:visited {
   color: white;
 }
 .content {
-  /*margin-top: 50%;*/
+  /*height: 100%;*/
   position: relative;
   background: white;
+
 }
 
 #top {
-  height: 50px;
+  height: 30px;
   width: 100%;
 }
 
 #landing {
-  background:#352c35 url('images/mtHoodLg.png') 
+  background:#352c35 url('images/mtHood.jpg') 
     center 20px no-repeat;background-size:100% auto;
   /*background: transparent;*/
-  max-width: 1000px;
+  max-width: 1500px;
   position: fixed;
   height: 100%;
 
@@ -71,17 +65,10 @@ a a:visited {
 }
 
 #slogan {
+  background: url(images/logo.png) 
+    center no-repeat;
   height: 100%;
-  /*background: transparent;
-  font-size: 50px;
-  color: white;
-  font-family: 'Exo', sans-serif;
-  
-  */
-  /*text-align: center;*/
-  /*vertical-align: middle;*/
-  margin-top: 3%;
-  margin-left: 30%;
+  max-height: 900px;
   position: relative;
   display: block;
 }
@@ -90,6 +77,7 @@ a a:visited {
 #divOne {
   /*position: relative;*/
   background: black;
+  padding-left: 0px;
   
   /*font-weight: 100;*/
   
@@ -121,6 +109,10 @@ a a:visited {
   margin-bottom: 10px;
 }
 
+#office {
+  padding-left: 0px;
+}
+
 .modalImg {
   padding-top: 50px;
 }
@@ -129,7 +121,7 @@ a a:visited {
   font-size: 30px;
 }
 
-button {
+button, .button {
   background: black;
   color: #EEE8DA;
   border: solid 1px #767676;
@@ -146,7 +138,6 @@ button {
   font-weight: 400;
   /*height: 500px;*/
   background: rgb(242, 242, 242);
-  font-weight: 400;
   color: black;
   position: relative;
 }
@@ -168,30 +159,29 @@ button {
   position: relative;
 }
 
-#divTwo h2 {
+/*#divTwo h2 {
   position: absolute;
   top: 10%;
   left: 10%;
-}
+}*/
 
-#divTwo img {
+/*#divTwo img {
   width: 100%;
-}
+}*/
 
 
 #itRecruiting {
   width: 100%;
   position: absolute;
   top: 10%;
-  text-align: center;
-  font-weight: 800;
+  font-size: 19px;
+  font-weight: 400;
 }
 
-/*#rapidlyFill {
-  color: #EEE8DA;
-  background: #ea5b50;
-  border-radius: 5px;
-}*/
+#rapidlyFill {
+  text-align: center;
+  text-decoration: underline;
+}
 
 .directIt {
   /*background: black;*/
@@ -324,8 +314,26 @@ button {
   width: 20%;
 }
 
+#files {
+  /*float: right;*/
+}
 
+@media (max-width: 1280px) {
+  #slogan {
+    max-height: 700px;
+  }
+}
 
+@media (max-width: 990px) {
+  #itRecruiting {
+   position: relative;
+   background: white;
+  }
+
+  #slogan {
+    max-height: 500px;
+  }
+}
 
 @media (max-width: 790px) {
   #cloudText {
@@ -336,17 +344,18 @@ button {
     height: 400px;
   }*/
 
-  #itRecuiting {
-   position: relative;
-   background: white;
-   font-size: 10px;
-}
-
   #slogan {
-    /*height: 300px;*/
-    padding-top: 100px;
-
+    background: url(images/logoSm.png) center no-repeat;
+    max-height: 240px;
   }
+
+  
+/*
+  #slogan {
+    padding-top: 100px;
+    max-height: 300px;
+
+  }*/
 
   .content {
     margin-top: 0%;
