--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,16 @@ body {
   margin: auto;
 }
 
-a a:visited {
+a, a:visited {
   text-decoration: none;
   color: white;
 }
+
+ a:hover {
+  color: #DBDBDB;
+  text-decoration: none;
+ }
+
 /*
 .alignRight {
   text-align: right;
@@ -41,10 +47,13 @@ a a:visited {
 .nav {
   color: white;
 }
+
 .content {
   /*height: 100%;*/
   position: relative;
-  background: white;
+  background: rgb(242, 242, 242);
+  /*padding: 0px;
+  margin: 0px;*/
 
 }
 
@@ -54,7 +63,7 @@ a a:visited {
 }
 
 #landing {
-  background:#352c35 url('images/mtHood.jpg') 
+  background:#352c35 url('images/mtHoodLg.png') 
     center 20px no-repeat;background-size:100% auto;
   /*background: transparent;*/
   max-width: 1500px;
@@ -73,6 +82,61 @@ a a:visited {
   display: block;
 }
 
+#quotes {
+  font-size: 30px;
+  font-family: helvetica, Arial, sans-serif;
+  font-style: italic;
+  position: absolute;
+  display: block;
+  margin-left: 20px;
+  bottom: 200px;
+  /*height: 20px;*/
+  width: 190px;
+  background: transparent;
+}
+/**/
+.slidingQuotes {
+  height: 20px;
+  background: transparent;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-name: slider;
+  /*-webkit-animation-iteration-count: one;*/
+  /*-webkit-animation-direction: alternate;*/
+  -webkit-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes slider {
+  from {
+    margin-left: 2000px;
+  }
+
+  to {
+    margin-left: 20px;
+  }
+}
+/**/
+
+/**/
+.leavingQuotes {
+  height: 20px;
+  background: transparent;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-name: leaver;
+  /*-webkit-animation-iteration-count: one;*/
+  /*-webkit-animation-direction: alternate;*/
+  -webkit-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes leaver {
+  from {
+    margin-left: 20px;
+  }
+
+  to {
+    margin-left: -2000px;
+  }
+}
+/**/
 
 #divOne {
   /*position: relative;*/
@@ -100,6 +164,16 @@ a a:visited {
   text-align: right;
 }
 
+/*.meetTeam {
+  background: none;
+  border: solid 1px grey;
+  border-radius: 4px;
+}*/
+
+.btn-default {
+  /*width: 20px;*/
+}
+
 .modal-content {
   color: black;
   font-size: 15px;
@@ -111,6 +185,7 @@ a a:visited {
 
 #office {
   padding-left: 0px;
+  text-align: center;
 }
 
 .modalImg {
@@ -121,7 +196,7 @@ a a:visited {
   font-size: 30px;
 }
 
-button, .button {
+/*button, .button {
   background: black;
   color: #EEE8DA;
   border: solid 1px #767676;
@@ -130,7 +205,7 @@ button, .button {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   margin-top: 20px;
-}
+}*/
 
 #coreValues {
   font-size: 19px;
@@ -142,22 +217,41 @@ button, .button {
   position: relative;
 }
 
-#coreValues div {
+.CVDiv {
   padding: 10px;
   padding-top: 10px;
 
 }
 
+.CVQuote {
+  padding-top: 30%;
+  padding-bottom: 30%;
+  font-size: 30px;
+  color: #46B054;
+}
+
 #divTwo {
-  background: none;
-  /*width: 100%;*/
-  width: 100%;
+  /*background: url('images/comp.png') 
+    center 20px no-repeat;background-size:100% auto;*/
+  background: rgb(242, 242, 242);
+  /*width: 100%;
+  height: 100%;*/
   font-size: 19px;
   font-weight: 400;
   color: black;
+/*  padding-left: 0px;
+  padding-right: 0px;*/
+ /* margin-left: 0px;
+  margin-right: 0px;*/
+  /*margin-right: 0px;*/
   /*text-align: right;*/
   position: relative;
 }
+
+/*#divTwo img {
+  width: 110%;
+
+}*/
 
 /*#divTwo h2 {
   position: absolute;
@@ -165,17 +259,25 @@ button, .button {
   left: 10%;
 }*/
 
-/*#divTwo img {
+#divTwo img, #pdx img {
   width: 100%;
-}*/
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
 
 #itRecruiting {
-  width: 100%;
+  /*width: 100%;*/
   position: absolute;
   top: 10%;
   font-size: 19px;
   font-weight: 400;
+/*  padding-left: 0px;
+  padding-right: 0px;*/
+ /* margin-left: 0px;
+  margin-right: 0px;*/
 }
 
 #rapidlyFill {
@@ -309,10 +411,7 @@ button, .button {
 }
 
 
-.btn-default {
-  background-image: none;
-  width: 20%;
-}
+
 
 #files {
   /*float: right;*/
@@ -347,6 +446,11 @@ button, .button {
   #slogan {
     background: url(images/logoSm.png) center no-repeat;
     max-height: 240px;
+  }
+
+  #quotes {
+    font-size: 15px;
+    bottom: 30px;
   }
 
   
