--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,40 @@
 /*@media only screen and (min-width: 0) and (max-width: 2040px){
   body {background:#352c35 url(images/mtHoodLg.png) 
     center 20px no-repeat;background-size:100% auto;
-  }*/
+    }*/
 
 
-body, html {
-  height: 100%;
-}
+    body, html {
+      height: 100%;
+    }
 
-body {
-	background: transparent;
-	/*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-  font-family: helvetica, Arial, sans-serif;
-  font-weight: 100;
-  color: #EEE8DA;
-  max-width: 1500px !important;
-  overflow: auto;
-  margin: auto;
-}
+    body {
+     background: transparent;
+     /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
+     font-family: helvetica, Arial, sans-serif;
+     font-weight: 100;
+     color: #EEE8DA;
+     max-width: 1500px !important;
+     overflow: auto;
+     margin: auto;
+   }
 
-a, a:visited {
-  text-decoration: none;
-  color: white;
-}
+   a, a:visited {
+    text-decoration: none;
+    color: white;
+  }
 
- a:hover {
-  color: #DBDBDB;
-  text-decoration: none;
- }
+  a:hover {
+    color: #DBDBDB;
+    text-decoration: none;
+  }
 
-.center {
-  text-align: center;
-}
+  .center {
+    text-align: center;
+  }
+  .left {
+    text-align: left;
+  }
 /*
 .alignRight {
   text-align: right;
@@ -39,37 +42,40 @@ a, a:visited {
 
 .alignLeft {
   text-align: left;
-}*/
+  }*/
+  
+
+  .navbar {
+    color: white;
+    background: black;
+  }
+
+  .navbar-collapse {
+    max-width: 1500px !important;
+    text-align: center;
+  }
+
+  .nav li {
+    color: white;
+  }
+
+  .nav li:hover {
+    background: #2B2B2B;
+  }
+
+  .dropdown-menu {
+    background: #2B2B2B;
+  }
+
+  .dropdown-menu li a {
+    color: white;
+  }
 
 
-.navbar {
-  color: white;
-  background: black;
-}
-
-.collapse {
-  /*text-align: center;*/
-}
-
-.nav li {
-  color: white;
-}
-
-.nav li:hover {
-  background: #2B2B2B;
-}
-
-.dropdown-menu {
-  background: #2B2B2B;
-}
-
-.dropdown-menu li a {
-  color: white;
-}
-.content {
-  /*height: 100%;*/
-  position: relative;
-  background: rgb(242, 242, 242);
+  .content {
+    /*height: 100%;*/
+    position: relative;
+    background: rgb(242, 242, 242);
   /*padding: 0px;
   margin: 0px;*/
 
@@ -82,34 +88,32 @@ a, a:visited {
 
 #landing {
   background:#352c35 url('images/mtHoodLg.png') 
-    center 20px no-repeat;background-size:100% auto;
-  /*background: transparent;*/
+  center 20px no-repeat;background-size:100% auto;
   max-width: 1500px;
   position: fixed;
   height: 100%;
-
   width: 100%;
 }
 
 #slogan {
   background: url(images/logo.png) 
-    center no-repeat;
+  center no-repeat;
   height: 100%;
   max-height: 900px;
   position: relative;
   display: block;
+  /*padding-bottom: 10%;*/
 }
 
 #quotes {
   font-size: 30px;
   font-family: helvetica, Arial, sans-serif;
-  font-style: italic;
   position: absolute;
   display: block;
   margin-left: 20px;
   bottom: 200px;
   /*height: 20px;*/
-  width: 190px;
+  width: 50%;
   background: transparent;
 }
 /**/
@@ -159,11 +163,11 @@ a, a:visited {
 #divOne {
   /*position: relative;*/
   /*background: url(images/office.jpg) 
-    center 0.2 no-repeat;*/
+  center 0.2 no-repeat;*/
   background: black;
   padding: 0px;
   color: white;
-  text-align: right;
+
 
   /*font-weight: 100;*/
   
@@ -173,12 +177,21 @@ a, a:visited {
   background: #3B4A45;
 }
 
+.talent {
+  padding-top: 15%;
+  padding-bottom: 15%;
+}
+
+#aboutUs {
+  display: block;
+}
+
 #aboutUs, #aboutUs a {
   /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
   font-family: helvetica, Arial, sans-serif;
 
   /*color: white;*/
-  font-size: 19px;
+  /*font-size: 19px;*/
 }
 
 #aboutUs ul {
@@ -195,40 +208,61 @@ a, a:visited {
   background: none;
   border: solid 1px grey;
   border-radius: 4px;
-}*/
+  }*/
 
-.btn-default {
-  background: transparent;
-  font-family: helvetica, Arial, sans-serif;
-  text-shadow: none;
-  color: white;
-}
+  .btn-default {
+    background: #2E2E33;
+    font-family: helvetica, Arial, sans-serif;
+    font-size: 15px;
+    font-weight: 100;
+    text-shadow: none;
+    color: white;
+    border: none;
+    border-radius: none;
+  }
 
-.modal-content {
-  color: black;
-  font-size: 15px;
-}
+  .btn-default:hover {
+    color: white;
+    background: #3A3940;
+  }
 
-.aboutDiv {
-  margin-bottom: 10px;
-}
+  .modal-content {
+    color: black;
+    font-size: 19px;
+  }
 
-#office {
-  padding: 0px;
-  text-align: center;
-}
+  .modal-content a {
+    color: black;
+  }
 
+  .modal-content a:hover {
+    color: #46B054;
+  }
+
+  .aboutDiv {
+    margin-bottom: 10px;
+  }
+
+  #office {
+    padding-top: 3px;
+    text-align: center;
+    /*position: absolute;*/
+  }
+
+/*.talentAreas {
+  padding-bottom: 10%
+  }*/
 /*.col-xs-12 {
   padding: 0px;
-}*/
+  }*/
 
-.modalImg {
-  padding-top: 50px;
-}
+  .modalImg {
+    padding-top: 50px;
+  }
 
-.title {
-  font-size: 30px;
-}
+  .title {
+    font-size: 30px;
+  }
 
 /*button, .button {
   background: black;
@@ -239,34 +273,34 @@ a, a:visited {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   margin-top: 20px;
-}*/
+  }*/
 
-#coreValues {
-  font-size: 19px;
-  /*background: black;  */
-  font-weight: 400;
-  /*height: 500px;*/
-  background: rgb(242, 242, 242);
-  color: black;
-  position: relative;
-}
+  #coreValues {
+    font-size: 19px;
+    /*background: black;  */
+    font-weight: 400;
+    /*height: 500px;*/
+    background: rgb(242, 242, 242);
+    color: black;
+    position: relative;
+  }
 
-.CVDiv {
-  padding: 10px;
-  padding-top: 10px;
+  .CVDiv {
+    padding-top: 10%;
+    padding-bottom: 10%;
 
-}
+  }
 
-.CVQuote {
-  padding-top: 30%;
-  padding-bottom: 30%;
-  font-size: 30px;
-  color: #46B054;
-}
+  .CVQuote {
+    padding-top: 20%;
+    padding-bottom: 10%;
+    font-size: 40px;
+    color: #46B054;
+  }
 
-#divTwo {
+  #divTwo {
   /*background: url('images/comp.png') 
-    center 20px no-repeat;background-size:100% auto;*/
+  center 20px no-repeat;background-size:100% auto;*/
   background: rgb(242, 242, 242);
   /*width: 100%;
   height: 100%;*/
@@ -274,44 +308,44 @@ a, a:visited {
   font-weight: 400;
   color: black;
 /*  padding-left: 0px;
-  padding-right: 0px;*/
+padding-right: 0px;*/
  /* margin-left: 0px;
-  margin-right: 0px;*/
-  /*margin-right: 0px;*/
-  /*text-align: right;*/
-  position: relative;
+ margin-right: 0px;*/
+ /*margin-right: 0px;*/
+ /*text-align: right;*/
+ position: relative;
 }
 
 /*#divTwo img {
   width: 110%;
 
-}*/
+  }*/
 
 /*#divTwo h2 {
   position: absolute;
   top: 10%;
   left: 10%;
-}*/
+  }*/
 
-#divTwo img, #pdx img {
-  width: 100%;
-  padding-left: 0px;
-  padding-right: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-}
+  #divTwo img, #pdx img {
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 
 
-#itRecruiting {
-  /*width: 100%;*/
-  position: absolute;
-  top: 10%;
-  font-size: 19px;
-  font-weight: 400;
+  #itRecruiting {
+    /*width: 100%;*/
+    position: absolute;
+    top: 10%;
+    font-size: 19px;
+    font-weight: 400;
 /*  padding-left: 0px;
-  padding-right: 0px;*/
+padding-right: 0px;*/
  /* margin-left: 0px;
-  margin-right: 0px;*/
+ margin-right: 0px;*/
 }
 
 #rapidlyFill {
@@ -330,22 +364,27 @@ a, a:visited {
 
 
 #divThree {
-  height: 500px;
+  height: 100px;
   background: rgb(242, 242, 242);
   /*font-size: 19px;*/
   /*font-weight: 400;*/
+  text-align: center;
   color: black;
   width: 100%;
+  /*bottom: 20px;*/
   position: relative;
 }
 
+#divThree div {
+  padding-top: 50px;
+}
 /*.divCenter {
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 30px;
   font-weight: 150;
   color: #999;
-}*/
+  }*/
 
 
 /*.carousel-fade {
@@ -375,7 +414,7 @@ a, a:visited {
   .carousel-control {
     z-index: 2;
   }
-}*/
+  }*/
 
 
 
@@ -397,59 +436,84 @@ a, a:visited {
 
 #slideshow IMG.last-active {
     z-index:9;
-}*/
+    }*/
 
 
-.quote {
-  width: 200px;
-  height: 200px;
-}
+    .quote {
+      width: 200px;
+      height: 200px;
+    }
 
 
 
-.textOverlay {
-  background: white;
+    .textOverlay {
+      background: white;
 
-}
+    }
 
-.yellowTop {
-  background: #FFDC00;
-  width: 100%;
-}
-
-
-#cloudText {
-	font-size: 35px;
-	font-weight: 100;
-	background: white;
-  /*position: relative;*/
-}
+    .yellowTop {
+      background: #FFDC00;
+      width: 100%;
+    }
 
 
-#future {
-	font-size: 30px;
-	font-weight: 150;
-}
+    #cloudText {
+     font-size: 35px;
+     font-weight: 100;
+     background: white;
+     /*position: relative;*/
+   }
 
-#listings {
+
+   #future {
+     font-size: 30px;
+     font-weight: 150;
+   }
+
+   #listings {
 	/*font-size: 30px;
 	font-weight: 150;
 	color: #999;*/
 }
 
 #contact {
-  text-align: right;
-  /*font-size: 30px;*/
-  /*font-weight: 150;*/
+  /*text-align: right;*/
+  font-size: 19px;
   color: black;
+  /*height: 200px*/
 }
 
+/*@media (min-width: 868px) {
+  .navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+  }
 
+  .navbar .navbar-collapse .navbar-brand {
+    text-align: center;
+  }
 
-
-#files {
-  /*float: right;*/
+  .nav>li {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 }
+*/
+/*@media (min-width: 768px) {
+  .navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+  }
+
+  .navbar .navbar-collapse, .navbar-brand {
+    text-align: center;
+  }
+
+  .nav>li {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}*/
 
 @media (max-width: 1280px) {
   #slogan {
@@ -461,11 +525,11 @@ a, a:visited {
   #itRecruiting {
    position: relative;
    background: white;
-  }
+ }
 
-  #slogan {
-    max-height: 500px;
-  }
+ #slogan {
+  max-height: 500px;
+}
 }
 
 @media (max-width: 790px) {
@@ -475,32 +539,33 @@ a, a:visited {
 
   /*#landing {
     height: 400px;
-  }*/
+    }*/
 
-  #slogan {
-    background: url(images/logoSm.png) center no-repeat;
-    max-height: 240px;
-  }
+    #slogan {
+      background: url(images/logoSm.png) center no-repeat;
+      max-height: 240px;
+    }
 
-  #quotes {
-    font-size: 15px;
-    bottom: 30px;
-  }
+    #quotes {
+      font-size: 12px;
+      bottom: 50px;
+      width: 75%;
+    }
 
-  
+
 /*
   #slogan {
     padding-top: 100px;
     max-height: 300px;
 
-  }*/
+    }*/
 
-  .content {
-    margin-top: 0%;
-  }
+    .content {
+      margin-top: 0%;
+    }
 
-  #aboutUs {
-    /*padding-left: 10px;*/
+    #aboutUs {
+      /*padding-left: 10px;*/
+    }
+
   }
- 
-}
