--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     body {
      background: transparent;
      /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-     font-family: helvetica, Arial, sans-serif;
+     font-family: "Muli", open sans, helvetica, sans-serif;
      font-weight: 100;
      color: #EEE8DA;
      max-width: 1500px !important;
@@ -100,6 +100,7 @@
   center no-repeat;
   height: 100%;
   max-height: 900px;
+  /*top: 50px;*/
   position: relative;
   display: block;
   /*padding-bottom: 10%;*/
@@ -107,7 +108,8 @@
 
 #quotes {
   font-size: 20px;
-  font-family: helvetica, Arial, sans-serif;
+  font-family: 'Muli', Arial, sans-serif;
+  font-style: italic;
   position: absolute;
   display: block;
   margin-left: 20px;
@@ -189,7 +191,7 @@
 
 #aboutUs, #aboutUs a {
   /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-  font-family: helvetica, Arial, sans-serif;
+  /*font-family: helvetica, Arial, sans-serif;*/
 
   /*color: white;*/
   /*font-size: 19px;*/
@@ -345,10 +347,16 @@ padding-right: 0px;*/
     top: 10%;
     font-size: 19px;
     font-weight: 400;
-/*  padding-left: 0px;
+    font-family: "Muli", sans-serif;
+
+  /*  padding-left: 0px;
 padding-right: 0px;*/
  /* margin-left: 0px;
  margin-right: 0px;*/
+}
+
+.itDesc {
+  background: rgba(242, 242, 242, 0.5);
 }
 
 #rapidlyFill {
