--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,10 @@
   }*/
 
   .btn-default {
+    /*height: 18px;
+    width: 125px;
+    padding-bottom: 12px;
+    padding-top: 12px;
     background: #2E2E33;
     font-family: helvetica, Arial, sans-serif;
     font-size: 15px;
@@ -226,8 +230,53 @@
     color: white;
     border: none;
     border-radius: none;
-    margin-bottom: 10%;
+    margin-bottom: 10%;*/
     /*margin-left: 5%;*/
+    border-bottom-color: rgb(204, 204, 204);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-image-outset: 0px;
+    border-image-repeat: stretch;
+    border-image-slice: 100%;
+    border-image-source: none;
+    border-image-width: 1;
+    border-left-color: rgb(204, 204, 204);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-right-color: rgb(204, 204, 204);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-top-color: rgb(204, 204, 204);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    color: rgb(242, 242, 242);
+    cursor: auto;
+    display: inline-block;
+    /*font-family: proxima-nova, Arial, sans-serif;*/
+    font-size: 12px;
+    
+    
+    letter-spacing: normal;
+    line-height: 18px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-bottom: 12px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 12px;
+    text-align: center;
+    background: transparent;
+    text-decoration: none solid rgb(153, 153, 153);
+    text-shadow: none;
+    height: 38px;
+    width: 125px;
+
   }
 
   .btn-default:hover {
@@ -264,6 +313,12 @@
 /*.col-xs-12 {
   padding: 0px;
   }*/
+
+  #teamListings {
+    height: 300px;
+    background: #8A8A8A;
+    padding-top: 100px;
+  }
 
   .modalImg {
     padding-top: 10px;
@@ -354,7 +409,7 @@ padding-right: 0px;*/
     font-family: "Muli", sans-serif;
 
   /*  padding-left: 0px;
-padding-right: 0px;*/
+  padding-right: 0px;*/
  /* margin-left: 0px;
  margin-right: 0px;*/
 }
@@ -536,23 +591,23 @@ padding-right: 0px;*/
     padding-left: 0px;
     padding-right: 0px;
   }
-}*/
+  }*/
 
-@media (max-width: 1280px) {
-  #slogan {
-    max-height: 700px;
+  @media (max-width: 1280px) {
+    #slogan {
+      max-height: 700px;
+    }
   }
-}
 
-@media (max-width: 990px) {
-  #itRecruiting {
-   position: relative;
-   background: white;
- }
+  @media (max-width: 990px) {
+    #itRecruiting {
+     position: relative;
+     background: white;
+   }
 
- #slogan {
-  max-height: 500px;
-}
+   #slogan {
+    max-height: 500px;
+  }
 }
 
 @media (max-width: 790px) {
