--- a/styles.css
+++ b/styles.css
@@ -569,9 +569,9 @@ padding-right: 0px;*/
    }
 
    #listings {
-	/*font-size: 30px;
-	font-weight: 150;
-	color: #999;*/
+  /*font-size: 30px;
+  font-weight: 150;
+  color: #999;*/
 }
 
 #contact {
@@ -584,6 +584,11 @@ padding-right: 0px;*/
 .fsBottom {
   padding-top: 50px;
 }
+
+#divThree a {
+    color: #91838A;
+    font-size: 12px;
+  }
 
 /*@media (min-width: 868px) {
   .navbar .navbar-nav {
